When I full screen a video then move the mouse over the UI interface (e.g. to click on progress bar) the video freezes. Audio continues. While the video is frozen mouse & keyboard are non responsive. Sometimes it recovers itself, and other times I have to force reboot.
I have tried clearing all VLC settings (i.e. rm -rf ~/.config/vlc) but makes no difference.
Using X Windows session instead of Wayland does not have this problem.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
GraphQL error: Timeout on validation of query
Linked items
0
Link issues together to show that they're related.
Learn more.
I attempted to capture debug using VLC from RPM package but it doesn't capture anything interesting. My attempts to compile from source with debug enabled failed due to QT related errors e.g.
dialogs_provider.cpp:388:77: error: call to ‘static QString DialogsProvider::getSaveFileName(QWidget*, const QString&, const QString&, const QString&, QString*)’ uses the default argument for parameter 5, which is not yet defined p_intf->p_sys->filepath, extensions );
BTW, full VLC version from RPM package is VLC media player 3.0.0-git Vetinari (revision 2.2.0-git-9451-g55835f1)
on arch linux the same happens, using newest xwayland, vlc-2.2.4. using weston, the progress bar flickers. on gnome one can make it freeze. i opened a bug for this on freedesktop and gnome:
It is unclear from this bug report whether OP is using VLC on X11 on Xwayland on Wayland or VLC directly on Wayland. And that makes a big difference. Especially if you compare to VLC 2.2 which does not support Wayland natively.
apply this patch fixes the problem for me. However I don't really understand from the doc what the Qt::X11BypassWindowManagerHint parameter is doing so I don't know if this is a proper fix.
apply this patch fixes the problem for me. However I don't really understand from the doc what the Qt::X11BypassWindowManagerHint parameter is doing so I don't know if this is a proper fix.
This results in a borderless window that is not managed at all (i.e., no keyboard input)
It's a borderless window that does not grab keyboard or mouse focus.
The fix for this issue, causes the time tooltip, when displayed, to steal the focus from the main vlc window. (sometimes, leftover tooltip can remain on screen on top of other windows too, even though vlc/tooltip is no longer in focus)
This happens on ArchLinux with xfwm4, xfce4-session, xfce4-panel etc.