remove X11BypassWindowManagerHint from time tooltip

Fixes #17829

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>